components/ai-project-b/base/cluster-namespace-ai-project-b.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    opendatahub.io/dashboard: "true"
    opendatahub.io/generated-namespace: "true"
  name: ai-project-b
