components/ai-project-b/base/cluster-namespace-model-deploy-lab.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    opendatahub.io/dashboard: "true"
  name: model-deploy-lab
