components/ai-project-b/base/ai-project-b-route-granite-3-3-2b-instruct.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: granite-3-3-2b-instruct
  namespace: ai-project-b
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: granite-3-3-2b-instruct-predictor
